--- a/index.html
+++ b/index.html
@@ -265,6 +265,29 @@
 
                             }
                         });
+                        var labels = "ABCDEFGHIJKLMONPQRSTUVWXYZ";
+
+            var locations = [{
+                lat: 42.104101,
+                lng: -83.242062
+            }, {
+                lat: 49.662222,
+                lng: 18.433333
+            }, {
+                lat: 52.423056,
+                lng: 10.787222
+            }];
+
+            var markers = locations.map(function(location, i) {
+                return new google.maps.Marker({
+                    position: location,
+                    label: labels[i % labels.length]
+                });
+            });
+
+            var markerCluster = new MarkerClusterer(map, markers, {
+                imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'
+            });
                     }
                 </script>
                 <script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js">
