addition of 3 more markers on api map

--- a/index.html
+++ b/index.html
@@ -273,7 +273,19 @@
             }, {
                 lat: 49.662222,
                 lng: 18.433333
-            }, {
+            },{
+                lat: 47.698889,
+                lng: 17.684722
+            },
+            {
+                lat: 48.176944,
+                lng: 11.56
+            },
+            {
+                lat: 37.494756,
+                lng: -121.944767
+            },
+             {
                 lat: 52.423056,
                 lng: 10.787222
             }];
