--- a/index.html
+++ b/index.html
@@ -254,54 +254,7 @@
 
 	
 	<!-- ./Footer -->
-    <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
-                 <script>
-                    function initMap() {
-                        var map = new google.maps.Map(document.getElementById("map"),{
-                            zoom: 3, 
-                            center: {
-                                lat: 46.619261,
-                                lng: -33.134766
-
-                            }
-                        });
-                        var labels = "ABCDEFGHIJKLMONPQRSTUVWXYZ";
-
-            var locations = [{
-                lat: 42.104101,
-                lng: -83.242062
-            }, {
-                lat: 49.662222,
-                lng: 18.433333
-            },{
-                lat: 47.698889,
-                lng: 17.684722
-            },
-            {
-                lat: 48.176944,
-                lng: 11.56
-            },
-            {
-                lat: 37.494756,
-                lng: -121.944767
-            },
-             {
-                lat: 52.423056,
-                lng: 10.787222
-            }];
-
-            var markers = locations.map(function(location, i) {
-                return new google.maps.Marker({
-                    position: location,
-                    label: labels[i % labels.length]
-                });
-            });
-
-            var markerCluster = new MarkerClusterer(map, markers, {
-                imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'
-            });
-                    }
-                </script>
+                <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
                 <script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js">
                 </script>
                 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-16JK-HgdtMTjM7Pog3IHasRcXqRBS9s&callback=initMap"></script>
@@ -309,6 +262,7 @@
 				<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 				<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+                <script src="js/maps.js"></script>
                 
 
                 <script>
