changing heading colours and adding content to the reviews page

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
 	<link rel="stylesheet" href="./css/styles.css">
 
-	
+</head>
 
 <body data-spy="scroll" data-target="#navbarSupportedContent">
 
@@ -75,7 +75,7 @@
 <!-- Page Content -->
 <section class="py-5 paragraph-bg">
   <div class="container">
-    <h1 class="font-weight-light text-dark">About Me</h1>
+    <h1 class="font-weight-light my-4">About Me</h1>
     <p class="lead text-dark">Welcome to DailyDriverss!</p>
     <p class="text-dark"> 
     My name is Liam and I set up DailyDriverss.com in 2020 to provide consumers and car enthusiasts with a friendly, 
@@ -162,6 +162,8 @@ I hope you enjoy this site and please follow me on social media so you never mis
 				<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 				<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+                <link rel="stylesheet" href="js/main.js">
 
                 <script>
                 (function($) {
