small margin change on contact page, change of headings

--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
                         </div>
                      </form>
                   </div>
-                  <div class="col-md-4">
+                  <div class="col-md-4" style="margin-top: 40px;">
                      <div class="single-contact">
                         <i class="fa fa-map-marker bg-light"></i>
                         <h5 class="text-light">Address</h5>
