--- a/media.html
+++ b/media.html
@@ -63,7 +63,7 @@
 <!-- Page Content -->
 <div class="container">
 
-  <h1 class="font-weight-light text-dark text-center text-lg-left mt-4 mb-0">Gallery</h1>
+  <h1 class="font-weight-light text-dark text-center text-lg-left my-4 mb-0">Gallery</h1>
 
   <hr class="mt-2 mb-5 bg-light">
 
