--- a/reviews.html
+++ b/reviews.html
@@ -77,7 +77,7 @@
         <div class="col-md-5">
           <h3>Bmw m4</h3>
           <p>The BMW M4 DTM competes in the Deutsche Tourenwagen Masters since 2014. ... The M4 GT4, aimed at amateur drivers, debuted at the 2017 24 Hours of Nürburgring. It features a 3.0 L turbocharged straight-six engine rated at 317 kW (431 PS; 425 hp), and a 7-speed dual clutch transmission.</p>
-          <a target="_blank" class="btn btn-secondary" href="https://www.carwow.co.uk/bmw/m4?source=navbarSearch">Read More</a>
+          <a target="_blank" class="btn btn-info" href="https://www.carwow.co.uk/bmw/m4?source=navbarSearch">Read More</a>
         </div>
       </div>
       <!-- /.row -->
@@ -94,7 +94,7 @@
         <div class="col-md-5">
           <h3>Hyundai i30N</h3>
           <p>The newly developed four-cylinder 2.0 T-GDi engine is highly responsive with a rich torque curve supported by an over boost function that temporarily increases torque by 8%. i30 N features front-wheel drive and a six-speed manual transmission.</p>
-          <a target="_blank" class="btn btn-secondary" href="https://www.carwow.co.uk/hyundai/i30-n?source=navbarSearch">Read More</a>
+          <a target="_blank" class="btn btn-info" href="https://www.carwow.co.uk/hyundai/i30-n?source=navbarSearch">Read More</a>
         </div>
       </div>
       <!-- /.row -->
@@ -111,7 +111,7 @@
         <div class="col-md-5">
           <h3>Mk7 Golf Gti</h3>
           <p>The quintessential hot hatch. Rarely the most exciting, most engaging or best-handling car in its class, but usually the most sophisticated and desirable, the Golf GTI has been around in some form or another since the mid-Seventies, when it was dreamt up by a team of just six blokes working after-hours. It was an instant hit - VW planned to build 5,000 of them, but ended up selling six times that in the space of just one year.</p>
-          <a target="_blank" class="btn btn-secondary" href="https://www.carwow.co.uk/volkswagen/golf-gti?source=navbarSearch">Read More</a>
+          <a target="_blank" class="btn btn-info" href="https://www.carwow.co.uk/volkswagen/golf-gti?source=navbarSearch">Read More</a>
         </div>
       </div>
       <!-- /.row -->
@@ -129,7 +129,7 @@
         <div class="col-md-5">
           <h3>Toyota Supra</h3>
           <p>The Toyota Supra (Japanese: トヨタ・スープラ, Toyota Sūpura) is a sports car and grand tourer manufactured by Toyota Motor Corporation beginning in 1978. The initial four generations of the Supra were produced from 1978 to 2002. ... The Supra also traces much of its roots back to the 2000GT owing to an inline-6 layout.</p>
-          <a target="_blank" class="btn btn-secondary" href="https://www.carwow.co.uk/toyota/supra?source=navbarSearch">Read More</a>
+          <a target="_blank" class="btn btn-info" href="https://www.carwow.co.uk/toyota/supra?source=navbarSearch">Read More</a>
         </div>
       </div>
       <!-- /.row -->
@@ -146,7 +146,7 @@
         <div class="col-md-5">
           <h3>Tesla Model S</h3>
           <p>The Tesla Model S is an all-electric five-door liftback sedan, produced by Tesla, Inc., and introduced on June 22, 2012. As of March 2020, the Model S Long Range Plus has an EPA range of 390 miles (630 km), which is higher than any other battery electric car.</p>
-          <a target="_blank" class="btn btn-secondary" href="https://www.carwow.co.uk/tesla/model-3?source=navbarSearch">Read More</a>
+          <a target="_blank" class="btn btn-info" href="https://www.carwow.co.uk/tesla/model-3?source=navbarSearch">Read More</a>
         </div>
       </div>
 
@@ -164,7 +164,7 @@
           <h3>Mk5 Golf GTi</h3>
           <p>The GTI is such a neat and tidy thing to drive. It doesn’t default to safe understeer like too many VW group cars do, but neither is it snappy and spiteful. Like all great hot hatches, it cossets you and welcomes you, allowing you to quickly build confidence, driving it quicker and quicker each time you get in.
 The Mk5 Golf GTI relishes a smooth, measured driving style, and it’s unlikely to unearth your inner yob or encourage you to start throwing it around. But as your cornering speeds build, you’ll uncover more and more about a finely balanced chassis that works both axles, rather than just hinging around how much grip its front two tyres have.</p>
-          <a target="_blank" class="btn btn-secondary" href="https://www.topgear.com/car-news/top-gear-heroes/top-gears-bargain-heroes-mk5-vw-golf-gti">Read More</a>
+          <a target="_blank" class="btn btn-info" href="https://www.topgear.com/car-news/top-gear-heroes/top-gears-bargain-heroes-mk5-vw-golf-gti">Read More</a>
         </div>
       </div>
 
@@ -182,7 +182,7 @@ The Mk5 Golf GTI relishes a smooth, measured driving style, and it’s unlikely 
           <h3>Ford Fiesta ST</h3>
           <p>Unleash the performance
 The All-New Fiesta ST is more powerful, more responsive, and more fun to drive than ever before. A brand new 1.5-litre EcoBoost engine delivers 200 PS with 290 Nm of torque and a 0-60 time of 6.5 seconds. Cylinder deactivation can improve efficiency for everyday driving, helping you save fuel. And the introduction of a mechanical limited-slip differential enhances traction and control when you need it most.</p>
-          <a target="_blank" class="btn btn-secondary" href="https://www.topgear.com/car-reviews/ford/fiesta-st">Read More</a>
+          <a target="_blank" class="btn btn-info" href="https://www.topgear.com/car-reviews/ford/fiesta-st">Read More</a>
         </div>
       </div>
 
@@ -199,7 +199,7 @@ The All-New Fiesta ST is more powerful, more responsive, and more fun to drive t
         <div class="col-md-5">
           <h3>Audi Rs3</h3>
           <p>The Audi RS3 used to be a missed opportunity. A classy, good-looking hatchback that’d had a rally car-aping five-cylinder engine shoehorned ahead of the driver, but without much sense of humour sprinkled in. It was almightily quick, but just a bit of a blunt instrument once the novelty of its gargling noise and whiplash-inducing acceleration had worn thin.</p>
-          <a target="_blank" class="btn btn-secondary" href="https://www.whatcar.com/audi/rs3/hatchback/review/n175">Read More</a>
+          <a target="_blank" class="btn btn-info" href="https://www.whatcar.com/audi/rs3/hatchback/review/n175">Read More</a>
         </div>
       </div>
       
