--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <h4 class="card-title">
             <a target="_blank" href="https://www.carwow.co.uk/ford/mustang?source=navbarSearch">Ford Mustang GT</a>
           </h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <p class="card-text">As soon as you start the New Ford Mustang, you’ll fire up a range of advanced technologies that enhance your driving experience in every way. For example, the new 12” digital instrument cluster delivers invaluable information, all optimised to match the drive mode: Normal, Sport+, Snow/Wet, Track, and Drag Strip.</p>
         </div>
       </div>
     </div>
@@ -160,7 +160,7 @@
           <h4 class="card-title">
             <a target="_blank" href="https://www.carwow.co.uk/hyundai/i30-n?source=navbarSearch">Hyundai i30N</a>
           </h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+          <p class="card-text">The newly developed four-cylinder 2.0 T-GDi engine is highly responsive with a rich torque curve supported by an over boost function that temporarily increases torque by 8%. i30 N features front-wheel drive and a six-speed manual transmission.</p>
         </div>
       </div>
     </div>
@@ -171,7 +171,7 @@
           <h4 class="card-title">
             <a target="_blank" href="https://www.carwow.co.uk/volkswagen/golf-gti?source=navbarSearch">Golf Gti</a>
           </h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <p class="card-text">The quintessential hot hatch. Rarely the most exciting, most engaging or best-handling car in its class, but usually the most sophisticated and desirable, the Golf GTI has been around in some form or another since the mid-Seventies, when it was dreamt up by a team of just six blokes working after-hours. It was an instant hit - VW planned to build 5,000 of them, but ended up selling six times that in the space of just one year.</p>
         </div>
       </div>
     </div>
@@ -182,7 +182,7 @@
           <h4 class="card-title">
             <a target="_blank" href="https://www.carwow.co.uk/audi/rs3?source=navbarSearch">Audi RS3</a>
           </h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+          <p class="card-text">The Audi RS3 used to be a missed opportunity. A classy, good-looking hatchback that’d had a rally car-aping five-cylinder engine shoehorned ahead of the driver, but without much sense of humour sprinkled in. It was almightily quick, but just a bit of a blunt instrument once the novelty of its gargling noise and whiplash-inducing acceleration had worn thin.</p>
         </div>
       </div>
     </div>
@@ -193,7 +193,7 @@
           <h4 class="card-title">
             <a target="_blank" href="https://www.carwow.co.uk/bmw/m4?source=navbarSearch">BMW M4</a>
           </h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <p class="card-text">The BMW M4 DTM competes in the Deutsche Tourenwagen Masters since 2014. ... The M4 GT4, aimed at amateur drivers, debuted at the 2017 24 Hours of Nürburgring. It features a 3.0 L turbocharged straight-six engine rated at 317 kW (431 PS; 425 hp), and a 7-speed dual clutch transmission.</p>
         </div>
       </div>
     </div>
@@ -204,13 +204,14 @@
           <h4 class="card-title">
             <a target="_blank" href="https://www.carwow.co.uk/tesla/model-3?source=navbarSearch">Tesla Model 3</a>
           </h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+          <p class="card-text">The Tesla Model S is an all-electric five-door liftback sedan, produced by Tesla, Inc., and introduced on June 22, 2012. As of March 2020, the Model S Long Range Plus has an EPA range of 390 miles (630 km), which is higher than any other battery electric car.</p>
         </div>
       </div>
     </div>
   </div>
   </section>
 	<!-- Closing Reviews-->
+    
     <!-- Footer -->
   <footer class="bg-dark">
     <div class="container py-5">
