making scroll button not show on small screens and adding hover effect to images

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
       <h2 class="text-white">All about the Drive</h2>
-       <div class="circle">
+       <div class="circle d-none d-md-block">
        <a href="#what-we-do"><i class="fas fa-chevron-down"></i></a>
        
        </div>
