making changes to scroll button and social icons for responsivness

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
       <h2 class="text-white">All about the Drive</h2>
-       <div class="circle d-none d-md-block">
+       <div class="circle">
        <a href="#what-we-do"><i class="fas fa-chevron-down"></i></a>
        
        </div>
