img changes when responsive

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 	 <!-- features-->
 
      <!--Social-->
-    <div class="social-body  ">
-      <div class="container-1 ">
+    <div class="social-body">
+      <div class="container-social">
         <div class="icon">
            <div class="iconBx active" data-id="content1">
                <img src="./images/facebooksvg.svg" alt="" >
