removing extra js files from each page

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
   <footer class="bg-dark">
     <div class="container py-5">
       <div class="row py-4">
-        <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="img/logo.png" alt="" width="180" class="mb-3">
+        <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
           <p class="font-italic text-muted text-white">We are are also on updating and posting constantly on social media, follow us!!</p>
           <ul class="list-inline mt-4">
             <li class="list-inline-item"><a href="#" target="_blank" title="twitter"><i class="fab fa-twitter"></i></a></li>
