--- a/media.html
+++ b/media.html
@@ -55,8 +55,17 @@
     </div>
   </nav>
 <!--Closing Nav-->
+<section>
+<div class="container">
+ <h1 class="font-weight-light text-dark text-center text-lg-left mt-4 my-4 mb-0">Video</h1>
+ <p class="text-dark"> This is Calvin from Calvins car diary, Doing a video on a lovely lapiz blue Golf R.</p>
 
+<div class="embed-responsive embed-responsive-21by9">
+  <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/eAT3YeaN5Yk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+</div>
 
+</section>
 
 
 <section class="paragraph-bg">
